force-app/main/default/objects/Collection_Report__c/Collection_Report__c.object-meta.xml
<CustomObject>
    <label>Collection Report</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Collection Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>