force-app/main/default/objects/Collection_Report__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <label>Booking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>