force-app/main/default/objects/Collection_Report__c/fields/Latest_GL_Date_for_DLD_Paid__c.field-meta.xml
<CustomField>
    <fullName>Latest_GL_Date_for_DLD_Paid__c</fullName>
    <label>Latest GL Date for DLD Paid</label>
    <type>Date</type>
</CustomField>