force-app/main/default/objects/Collection_Report__c/fields/Total_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Amount__c</fullName>
    <label>Total Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>