force-app/main/default/objects/Collection_Report__c/fields/X20_As_Per_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>X20_As_Per_Receipt_Date__c</fullName>
    <label>20% As Per Receipt Date</label>
    <type>Date</type>
</CustomField>