force-app/main/default/objects/Collection_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>X10_As_Per_Receipt_Date__c</columns>
    <columns>X20_As_Per_Receipt_Date__c</columns>
    <columns>X10_As_Per_GL_Date__c</columns>
    <columns>X20_As_Per_GL_Date__c</columns>
    <columns>Booking__c</columns>
    <columns>Total_Paid_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Booking__c</field>
        <operation>equals</operation>
        <value>B-27068</value>
    </filters>
    <label>All</label>
</ListView>